--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -114,7 +114,7 @@ jobs:
           git clone https://github.com/Electrostatics/metis-fork.git metis-5.1.0
           cd metis-5.1.0
           make config prefix=/usr/local
-          make install
+          sudo make install
           cd ..
           git clone https://github.com/opencollab/arpack-ng.git
           cd arpack-ng
@@ -122,7 +122,7 @@ jobs:
           git checkout tags/3.8.0 -b latest
           mkdir build && cd build
           cmake -DCMAKE_INSTALL_PREFIX=/usr/local -DCMAKE_BUILD_TYPE=Release -DCMAKE_Fortran_COMPILER=$(which gfortran-11) -DEXAMPLES=OFF -DMPI=OFF -DBUILD_SHARED_LIBS=OFF  ..
-          make install
+          sudo make install
 #          brew upgrade gcc@9
 
       - name: Linux Prereqs and Remove broken apt repos [Ubuntu]
